NN notebook update

--- a/model_experiements/neural_network_cv.ipynb
+++ b/model_experiements/neural_network_cv.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2578,6 +2578,18 @@
    "source": [
     "We first experiment with the use of a neural network for the classification task at hand.\n",
     "\n",
+    "We use a neural network for the following reasons:\n",
+    "#### Handling High-Dimensional Data: \n",
+    "Neural networks are suited for handling high-dimensional data because they can learn complex patterns and relationships between features, such as text embeddings. This allows for the modelling of complex patterns between words or phrases.\n",
+    "\n",
+    "#### Adaptability to Textual Nuances:\n",
+    "Neural networks can capture contextual information and nuances in text better than traditional models, which is crucial for accurately classifying fake news.\n",
+    "\n",
+    "#### Enhanced Performance with Non-Linearities:\n",
+    "Neural networks can leverage non-linear fucntions (e.g., ReLU, sigmoid) to capture more intricate patterns in the data, allowing them to be able to discern subtle cues in language taht indicate misleading content.\n",
+    "\n",
+    "Building upon our experiment using CNN, \n",
+    "\n",
     "We use only 2 hidden layers with a dropout rate of 0.3 initially.\n",
     "Additionally, the ADAM (Adaptive Moment Estimation) optimiser is used to adjust the weights to minimise the loss function (binary crossentropy for binary classification tasks).\n",
     "Early stopping is implemented to prevent the tree from being overfitted.\n",
@@ -2586,7 +2598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2602,17 +2614,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 11ms/step - accuracy: 0.9043 - loss: 0.2520 - val_accuracy: 0.9607 - val_loss: 0.1149\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 7ms/step - accuracy: 0.9066 - loss: 0.2463 - val_accuracy: 0.9589 - val_loss: 0.1136\n",
       "Epoch 2/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9750 - loss: 0.0733 - val_accuracy: 0.9645 - val_loss: 0.1060\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9744 - loss: 0.0752 - val_accuracy: 0.9603 - val_loss: 0.1171\n",
       "Epoch 3/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9869 - loss: 0.0416 - val_accuracy: 0.9659 - val_loss: 0.1156\n",
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9876 - loss: 0.0401 - val_accuracy: 0.9627 - val_loss: 0.1275\n",
       "Epoch 4/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9920 - loss: 0.0241 - val_accuracy: 0.9646 - val_loss: 0.1307\n",
-      "Epoch 5/20\n",
-      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9937 - loss: 0.0198 - val_accuracy: 0.9667 - val_loss: 0.1512\n",
-      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.9629 - loss: 0.1018\n",
-      "Test accuracy: 0.9644535183906555\n"
+      "\u001b[1m799/799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 5ms/step - accuracy: 0.9914 - loss: 0.0261 - val_accuracy: 0.9654 - val_loss: 0.1366\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step - accuracy: 0.9587 - loss: 0.1116\n",
+      "Test accuracy: 0.9588944315910339\n"
      ]
     }
    ],
@@ -2628,6 +2638,8 @@
     "from tensorflow.keras.optimizers import Adam\n",
     "from tensorflow.keras.callbacks import EarlyStopping\n",
     "\n",
+    "\n",
+    "data = pd.read_csv('processed_data.csv')\n",
     "\n",
     "use = data['processed_full_content'].apply(lambda x: x.lower())\n",
     "vectorizer = CountVectorizer(max_features=5000)\n",
@@ -2666,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2674,10 +2686,10 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 1ms/step\n",
-      "Accuracy: 0.9644534920137802\n",
-      "Precision: 0.9531036834924966\n",
-      "Recall: 0.9689667128987517\n",
-      "F1 Score: 0.9609697386519945\n"
+      "Accuracy: 0.9588944566238647\n",
+      "Precision: 0.9434951784807986\n",
+      "Recall: 0.966886269070735\n",
+      "F1 Score: 0.9550475211918829\n"
      ]
     }
    ],
@@ -2705,6 +2717,7 @@
    "metadata": {},
    "source": [
     "As we can observe from our initial run, it has unusually high performance metrics. This possibly implies overfitting, so we will try to tune the hyperparameters.\n",
+    "\n",
     "We lower the number of nodes for each layer from 128 to 64 and 64 to 32 respectively, and the dropout increased to 0.7.\n",
     "We also lower the number of epochs from 20 to 5 (as well as the patience value from 3 to 2, such that early stopping is now applied after 2-3 epochs of no improvement in the validation loss) and batch size to 16 in order to introduce more noise, as model weights are now updated more frequently.\n",
     "\n",
@@ -2715,7 +2728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2737,17 +2750,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 2ms/step - accuracy: 0.5380 - loss: 9.4094 - val_accuracy: 0.7025 - val_loss: 2.4158\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.5057 - loss: 10.2801 - val_accuracy: 0.6286 - val_loss: 3.3507\n",
       "Epoch 2/5\n",
-      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - accuracy: 0.6326 - loss: 1.8615 - val_accuracy: 0.7946 - val_loss: 0.9604\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 955us/step - accuracy: 0.5709 - loss: 2.5045 - val_accuracy: 0.6768 - val_loss: 1.1654\n",
       "Epoch 3/5\n",
-      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.7072 - loss: 0.8995 - val_accuracy: 0.8136 - val_loss: 0.6937\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 961us/step - accuracy: 0.6083 - loss: 1.0628 - val_accuracy: 0.7545 - val_loss: 0.7679\n",
       "Epoch 4/5\n",
-      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.7248 - loss: 0.7101 - val_accuracy: 0.8178 - val_loss: 0.6348\n",
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 977us/step - accuracy: 0.6277 - loss: 0.7689 - val_accuracy: 0.8168 - val_loss: 0.6533\n",
       "Epoch 5/5\n",
-      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 1ms/step - accuracy: 0.7384 - loss: 0.6723 - val_accuracy: 0.8385 - val_loss: 0.6180\n",
-      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.8421 - loss: 0.6168\n",
-      "Test accuracy: 0.8384748101234436\n"
+      "\u001b[1m3193/3193\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 1ms/step - accuracy: 0.6734 - loss: 0.6856 - val_accuracy: 0.8415 - val_loss: 0.6243\n",
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 815us/step - accuracy: 0.8447 - loss: 0.6232\n",
+      "Test accuracy: 0.8415283560752869\n"
      ]
     }
    ],
@@ -2793,18 +2806,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 967us/step\n",
-      "Accuracy: 0.8384747886000626\n",
-      "Precision: 0.8214471629359709\n",
-      "Recall: 0.8207350901525658\n",
-      "F1 Score: 0.8210909721619981\n"
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 920us/step\n",
+      "Accuracy: 0.8415283432508612\n",
+      "Precision: 0.845642540620384\n",
+      "Recall: 0.7940360610263523\n",
+      "F1 Score: 0.8190271816881259\n"
      ]
     }
    ],
@@ -2829,7 +2842,195 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy has now gone down to 0.83847 (compared to 0.96445) which is a more reasonable result. "
+    "Accuracy has now gone down to 0.83847 (compared to 0.96445) which is a more reasonable result. \n",
+    "\n",
+    "In this experiemnt, we sought to explore the capabilites of neural networks for fake news detection, only to find out that it had unusually high performance metrics. We then sought to increase the generalization capabilities, by tuning the hyperparameters of the neural network to not cause potential overfitting. \n",
+    "Methods we explored were:\n",
+    "1) lowering the number of nodes to reduce the network's ability to learn complex patterns\n",
+    "2) Increasing dropout to reduce sensitivity to training data\n",
+    "3) Lowering number of epochs to reduce the tendency to 'overlearn'\n",
+    "4) Utilise regularization (L1 and L2) to penalise large weights\n",
+    "\n",
+    "However, this ultimately leads to a far less complex model that not only fails to capture meaningful patterns in the data but may also fail to capture nuanced language patterns. The model is now:\n",
+    "\n",
+    "- less sensitive to important features\n",
+    "- potentially more sensitive to noise\n",
+    "- higher tendency to make overly simplistic assumptions, resulting in increased bias.  \n",
+    "\n",
+    "While F1 is now 0.81, the model could perform poorly against unseen test data or real-world scenarios due to its low complexity, resulting its inability to adapt to complex data.\n",
+    "\n",
+    "In the next part of of the experiment, we seek to implement some additional findings we have made from other the experiments with other models in order to feasibly leverage upon neural networks for our task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Using k-fold partitioning to achieve better results\n",
+    "\n",
+    "As we have learnt from our experiment with CNN, using count vectorizer/tf-idf will result in the the model being unable to capture language patterns and word associations since each term is treated as an independent vector.\n",
+    "\n",
+    "Thus, we will instead switch to a pre-trained GloVe embedding pre-processing process.\n",
+    "\n",
+    "Additionally, we will use the same k-fold partitioning method as the CNN experiment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 945us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 912us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 910us/step\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\65840\\anaconda3\\Lib\\site-packages\\keras\\src\\layers\\core\\dense.py:87: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m400/400\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 965us/step\n",
+      "Average Accuracy: 0.9108\n",
+      "Average Precision: 0.8828\n",
+      "Average Recall: 0.9273\n",
+      "Average F1 Score: 0.9045\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "data = pd.read_csv('processed_data.csv')\n",
+    "k_fold_var = data['processed_full_content'].copy()\n",
+    "\n",
+    "embeddings_index = {}\n",
+    "with open('./glove.6B.100d.txt', 'r', encoding='utf-8') as file:\n",
+    "    for line in file:\n",
+    "        values = line.split()\n",
+    "        word = values[0]\n",
+    "        coefs = np.array(values[1:], dtype='float32')\n",
+    "        embeddings_index[word] = coefs\n",
+    "\n",
+    "def text_to_embedding(text, embeddings_index, embedding_dim=100):\n",
+    "    words = text.split()\n",
+    "    embeddings = [embeddings_index[word] for word in words if word in embeddings_index]\n",
+    "    if embeddings:\n",
+    "        return np.mean(embeddings, axis=0)\n",
+    "    else:\n",
+    "        return np.zeros(embedding_dim)\n",
+    "    \n",
+    "X_embeddings = np.array([text_to_embedding(text, embeddings_index) for text in k_fold_var])\n",
+    "\n",
+    "skf = StratifiedKFold(n_splits=5, shuffle=True, random_state=1)\n",
+    "y = data['label']  \n",
+    "\n",
+    "def create_model(input_shape):\n",
+    "    model = Sequential([\n",
+    "        Dense(128, activation='relu', input_shape=(input_shape,)),\n",
+    "        Dropout(0.3),\n",
+    "        Dense(64, activation='relu'),\n",
+    "        Dropout(0.3),\n",
+    "        Dense(1, activation='sigmoid')\n",
+    "    ])\n",
+    "    model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+    "    return model\n",
+    "\n",
+    "# Store metrics\n",
+    "acc_scores, prec_scores, recall_scores, f1_scores = [], [], [], []\n",
+    "\n",
+    "for train_index, test_index in skf.split(X_embeddings, y):\n",
+    "    X_train, X_test = X_embeddings[train_index], X_embeddings[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "\n",
+    "    model = create_model(X_embeddings.shape[1])\n",
+    "    model.fit(X_train, y_train, epochs=10, batch_size=32, verbose=0)\n",
+    "\n",
+    "    # Predictions and Metrics\n",
+    "    y_pred = (model.predict(X_test) > 0.5).astype(int).flatten()\n",
+    "    acc_scores.append(accuracy_score(y_test, y_pred))\n",
+    "    prec_scores.append(precision_score(y_test, y_pred))\n",
+    "    recall_scores.append(recall_score(y_test, y_pred))\n",
+    "    f1_scores.append(f1_score(y_test, y_pred))\n",
+    "\n",
+    "print(f\"Average Accuracy: {np.mean(acc_scores):.4f}\")\n",
+    "print(f\"Average Precision: {np.mean(prec_scores):.4f}\")\n",
+    "print(f\"Average Recall: {np.mean(recall_scores):.4f}\")\n",
+    "print(f\"Average F1 Score: {np.mean(f1_scores):.4f}\")"
    ]
   }
  ],
