--- a/model_experiements/DistilBERT.ipynb
+++ b/model_experiements/DistilBERT.ipynb
@@ -255,7 +255,7 @@
     "\n",
     "DistilBERT has only 6 layers instead of BERT's 12, which makes it half the size of BERT in terms of layers. However, it retains the same hidden size (768), meaning it still processes and represents data similarly to BERT but with fewer computational steps. This results in a smaller number of parameters, making DistilBERT about 40-60% faster to train and use in inference.\n",
     "\n",
-    "DistilBERT is trained using knowledge distillation, a technique where a smaller model (the \"student\", DistilBERT) learns to mimic a larger model (the \"teacher\", BERT). During training, the student model doesn't just learn from the labelled dataset but also from the \"soft labels\" (probabilities) provided by the teacher model. This method allows DistilBERT to capture much of the knowledge from the original BERT model even with fewer layers, preserving 97% of BERT's performance on many NLP tasks."
+    "DistilBERT is trained using knowledge distillation, a technique where a smaller model (the \"student\", DistilBERT) learns to mimic a larger model (the \"teacher\", BERT) rather than directly learning from the raw data. During training, the student model doesn't just learn from the labelled dataset but also from the \"soft labels\" (probabilities) provided by the teacher model. This method allows DistilBERT to capture much of the knowledge from the original BERT model even with fewer layers, preserving 97% of BERT's performance on many NLP tasks."
    ]
   },
   {
