Added Bidirectional LSTM

--- a/model_experiements/LSTM_working.ipynb
+++ b/model_experiements/LSTM_working.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3127,7 +3127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3257,6 +3257,229 @@
     "                        input_length=input_length,\n",
     "                        trainable=True))\n",
     "    model.add(LSTM(units=64, return_sequences=False, dropout=0.2))\n",
+    "    model.add(Dropout(0.2))  # Added Dropout layer here\n",
+    "    model.add(Dense(1, activation='sigmoid', kernel_regularizer=l2(l2_lambda)))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
+    "\n",
+    "    return model\n",
+    "early_stopping = EarlyStopping(\n",
+    "    monitor='val_loss',  # or 'val_accuracy' if you prefer to monitor accuracy\n",
+    "    patience=3,          # stop after 3 epochs with no improvement\n",
+    "    restore_best_weights=True  # revert to the best weights after stopping\n",
+    ")\n",
+    "# K-Fold Cross-Validation with additional metrics\n",
+    "def k_fold_cross_validation(X, y, embedding_matrix, vocab_size, max_len, n_splits=5, batch_size=128):\n",
+    "    kfold = KFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "    metrics = {'accuracy': [], 'precision': [], 'recall': [], 'f1': [], 'roc_auc': []}\n",
+    "\n",
+    "    # Define early stopping\n",
+    "    early_stopping = EarlyStopping(\n",
+    "        monitor='val_loss',  # monitor validation loss\n",
+    "        patience=3,          # number of epochs with no improvement\n",
+    "        restore_best_weights=True  # revert to the best model weights\n",
+    "    )\n",
+    "\n",
+    "    for train_idx, val_idx in kfold.split(X):\n",
+    "        X_train, X_val = X[train_idx], X[val_idx]\n",
+    "        y_train, y_val = y[train_idx], y[val_idx]\n",
+    "\n",
+    "        model = create_lstm_model(vocab_size, embedding_matrix, max_len, learning_rate=0.001, l2_lambda=0.01)\n",
+    "        \n",
+    "        # Fit model with early stopping\n",
+    "        model.fit(\n",
+    "            X_train, y_train,\n",
+    "            validation_data=(X_val, y_val),\n",
+    "            epochs=10,             # maximum number of epochs\n",
+    "            batch_size=128,\n",
+    "            verbose=1,\n",
+    "            callbacks=[early_stopping]  # add early stopping\n",
+    "        )\n",
+    "        \n",
+    "        y_pred = (model.predict(X_val) > 0.5).astype(\"int32\")\n",
+    "        y_pred_prob = model.predict(X_val).ravel()\n",
+    "\n",
+    "        accuracy = accuracy_score(y_val, y_pred)\n",
+    "        precision = precision_score(y_val, y_pred)\n",
+    "        recall = recall_score(y_val, y_pred)\n",
+    "        f1 = f1_score(y_val, y_pred)\n",
+    "        roc_auc = roc_auc_score(y_val, y_pred_prob)\n",
+    "\n",
+    "        metrics['accuracy'].append(accuracy)\n",
+    "        metrics['precision'].append(precision)\n",
+    "        metrics['recall'].append(recall)\n",
+    "        metrics['f1'].append(f1)\n",
+    "        metrics['roc_auc'].append(roc_auc)\n",
+    "\n",
+    "        print(f\"Fold Accuracy: {accuracy}, Precision: {precision}, Recall: {recall}, F1 Score: {f1}, ROC AUC: {roc_auc}\")\n",
+    "\n",
+    "    avg_metrics = {metric: np.mean(scores) for metric, scores in metrics.items()}\n",
+    "    print(\"\\nAverage Metrics Across Folds:\")\n",
+    "    for metric, avg_score in avg_metrics.items():\n",
+    "        print(f\"{metric.capitalize()}: {avg_score:.4f}\")\n",
+    "    \n",
+    "    return avg_metrics\n",
+    "\n",
+    "# Example usage\n",
+    "# Load your data and tokenize it\n",
+    "texts = data[\"processed_full_content\"]\n",
+    "num_samples = len(texts)\n",
+    "labels = data[\"label\"].values  # Adjusted labels for each sample\n",
+    "\n",
+    "tokenizer = Tokenizer()\n",
+    "tokenizer.fit_on_texts(texts)\n",
+    "X = tokenizer.texts_to_sequences(texts)\n",
+    "max_len = 100\n",
+    "X = pad_sequences(X, maxlen=max_len)\n",
+    "\n",
+    "# Load GloVe embeddings\n",
+    "embedding_dim = 300\n",
+    "vocab_size = len(tokenizer.word_index) + 1\n",
+    "embedding_matrix = load_glove_embeddings(\"glove.6B.300d.txt\", tokenizer.word_index, embedding_dim)\n",
+    "\n",
+    "# Perform K-Fold cross-validation\n",
+    "avg_metrics = k_fold_cross_validation(X, labels, embedding_matrix, vocab_size, max_len)\n",
+    "print(\"Final Average Metrics:\", avg_metrics)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Bidirectional LSTM + GloVe 300D\n",
+    "\n",
+    "Instead of Standard LSTM from the previous code, which processes sequences in one direction, we implement Bidirectional LSTM which consists of 2 LSTM layers: one that processes sequences forward and one backward.\n",
+    "\n",
+    "Bidirectional LSTM generally provides better performance on NLP tasks where context from both directions is essential. However Bidirectional LSTM requires double the memory and computational resources compared to a standard LSTM since it processes each sequence in two directions. Standard LSTM is more resource-efficient and faster."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 27s 61ms/step - loss: 0.2000 - accuracy: 0.9268 - val_loss: 0.1316 - val_accuracy: 0.9569\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0917 - accuracy: 0.9730 - val_loss: 0.1197 - val_accuracy: 0.9630\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0567 - accuracy: 0.9855 - val_loss: 0.1224 - val_accuracy: 0.9627\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0377 - accuracy: 0.9921 - val_loss: 0.1399 - val_accuracy: 0.9626\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0282 - accuracy: 0.9953 - val_loss: 0.1486 - val_accuracy: 0.9593\n",
+      "400/400 [==============================] - 4s 8ms/step\n",
+      "400/400 [==============================] - 3s 8ms/step\n",
+      "Fold Accuracy: 0.963044159098027, Precision: 0.9676792652772872, Recall: 0.9498959778085991, F1 Score: 0.9587051618547682, ROC AUC: 0.9925806464069273\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 26s 59ms/step - loss: 0.2046 - accuracy: 0.9244 - val_loss: 0.1310 - val_accuracy: 0.9579\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0885 - accuracy: 0.9741 - val_loss: 0.1169 - val_accuracy: 0.9618\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0553 - accuracy: 0.9865 - val_loss: 0.1005 - val_accuracy: 0.9688\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0424 - accuracy: 0.9909 - val_loss: 0.1252 - val_accuracy: 0.9662\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0289 - accuracy: 0.9951 - val_loss: 0.1208 - val_accuracy: 0.9652\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0238 - accuracy: 0.9970 - val_loss: 0.1280 - val_accuracy: 0.9651\n",
+      "400/400 [==============================] - 4s 8ms/step\n",
+      "400/400 [==============================] - 3s 8ms/step\n",
+      "Fold Accuracy: 0.9687597870341371, Precision: 0.9737299930410578, Recall: 0.9575705731394354, F1 Score: 0.9655826792029673, ROC AUC: 0.99487123630608\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 26s 59ms/step - loss: 0.2006 - accuracy: 0.9282 - val_loss: 0.1298 - val_accuracy: 0.9585\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0936 - accuracy: 0.9726 - val_loss: 0.1166 - val_accuracy: 0.9628\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0597 - accuracy: 0.9852 - val_loss: 0.1128 - val_accuracy: 0.9662\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0372 - accuracy: 0.9922 - val_loss: 0.1207 - val_accuracy: 0.9650\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0278 - accuracy: 0.9951 - val_loss: 0.1285 - val_accuracy: 0.9645\n",
+      "Epoch 6/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0236 - accuracy: 0.9967 - val_loss: 0.1305 - val_accuracy: 0.9645\n",
+      "400/400 [==============================] - 4s 8ms/step\n",
+      "400/400 [==============================] - 3s 8ms/step\n",
+      "Fold Accuracy: 0.966176010021923, Precision: 0.9736654804270463, Recall: 0.9506601806810285, F1 Score: 0.9620253164556962, ROC AUC: 0.993769886541474\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 26s 59ms/step - loss: 0.2029 - accuracy: 0.9254 - val_loss: 0.1251 - val_accuracy: 0.9591\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0903 - accuracy: 0.9732 - val_loss: 0.1078 - val_accuracy: 0.9659\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0592 - accuracy: 0.9855 - val_loss: 0.1260 - val_accuracy: 0.9632\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0395 - accuracy: 0.9920 - val_loss: 0.1221 - val_accuracy: 0.9655\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0290 - accuracy: 0.9948 - val_loss: 0.1283 - val_accuracy: 0.9639\n",
+      "400/400 [==============================] - 4s 8ms/step\n",
+      "400/400 [==============================] - 3s 8ms/step\n",
+      "Fold Accuracy: 0.9659411212026308, Precision: 0.965832614322692, Recall: 0.9593760713061364, F1 Score: 0.9625935162094763, ROC AUC: 0.9940653160620544\n",
+      "Epoch 1/10\n",
+      "400/400 [==============================] - 26s 59ms/step - loss: 0.2024 - accuracy: 0.9261 - val_loss: 0.1292 - val_accuracy: 0.9604\n",
+      "Epoch 2/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0923 - accuracy: 0.9731 - val_loss: 0.1034 - val_accuracy: 0.9663\n",
+      "Epoch 3/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0563 - accuracy: 0.9863 - val_loss: 0.1054 - val_accuracy: 0.9659\n",
+      "Epoch 4/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0401 - accuracy: 0.9915 - val_loss: 0.1148 - val_accuracy: 0.9668\n",
+      "Epoch 5/10\n",
+      "400/400 [==============================] - 23s 57ms/step - loss: 0.0288 - accuracy: 0.9950 - val_loss: 0.1172 - val_accuracy: 0.9690\n",
+      "400/400 [==============================] - 4s 8ms/step\n",
+      "400/400 [==============================] - 3s 8ms/step\n",
+      "Fold Accuracy: 0.9663326025681177, Precision: 0.952191235059761, Recall: 0.9758421231711466, F1 Score: 0.963871618215426, ROC AUC: 0.9952455315918404\n",
+      "\n",
+      "Average Metrics Across Folds:\n",
+      "Accuracy: 0.9661\n",
+      "Precision: 0.9666\n",
+      "Recall: 0.9587\n",
+      "F1: 0.9626\n",
+      "Roc_auc: 0.9941\n",
+      "Final Average Metrics: {'accuracy': 0.966050735984967, 'precision': 0.966619717625569, 'recall': 0.9586689852212691, 'f1': 0.9625556583876668, 'roc_auc': 0.994106523381675}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from tensorflow.keras.callbacks import EarlyStopping\n",
+    "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, LSTM, Dense, Dropout, Bidirectional\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.regularizers import l2\n",
+    "from sklearn.model_selection import KFold\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "\n",
+    "\n",
+    "# Load and process GloVe embeddings\n",
+    "def load_glove_embeddings(glove_file, word_index, embedding_dim=300):\n",
+    "    embeddings_index = {}\n",
+    "    with open(glove_file, 'r', encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            values = line.split()\n",
+    "            word = values[0]\n",
+    "            coefficients = np.asarray(values[1:], dtype='float32')\n",
+    "            embeddings_index[word] = coefficients\n",
+    "    embedding_matrix = np.zeros((len(word_index) + 1, embedding_dim))\n",
+    "    for word, i in word_index.items():\n",
+    "        embedding_vector = embeddings_index.get(word)\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector\n",
+    "    return embedding_matrix\n",
+    "\n",
+    "\n",
+    "# Define LSTM model with Dropout and L2 regularization\n",
+    "def create_lstm_model(vocab_size, embedding_matrix, input_length, learning_rate=0.001, l2_lambda=0.01):\n",
+    "    model = Sequential()\n",
+    "    model.add(Embedding(vocab_size, embedding_matrix.shape[1],\n",
+    "                        weights=[embedding_matrix],\n",
+    "                        input_length=input_length,\n",
+    "                        trainable=True))\n",
+    "    model.add(Bidirectional(LSTM(units=64, return_sequences=False, dropout=0.2)))\n",
     "    model.add(Dropout(0.2))  # Added Dropout layer here\n",
     "    model.add(Dense(1, activation='sigmoid', kernel_regularizer=l2(l2_lambda)))\n",
     "    model.compile(loss='binary_crossentropy', optimizer=Adam(learning_rate), metrics=['accuracy'])\n",
